; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_enet.c_hns3_reset_notify_up_enet.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_enet.c_hns3_reset_notify_up_enet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hnae3_handle = type { %struct.hnae3_knic_private_info }
%struct.hnae3_knic_private_info = type { i32 }
%struct.hns3_nic_priv = type { i32 }

@HNS3_NIC_STATE_RESETTING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"net up fail, ret=%d!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hnae3_handle*)* @hns3_reset_notify_up_enet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hns3_reset_notify_up_enet(%struct.hnae3_handle* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hnae3_handle*, align 8
  %4 = alloca %struct.hnae3_knic_private_info*, align 8
  %5 = alloca %struct.hns3_nic_priv*, align 8
  %6 = alloca i32, align 4
  store %struct.hnae3_handle* %0, %struct.hnae3_handle** %3, align 8
  %7 = load %struct.hnae3_handle*, %struct.hnae3_handle** %3, align 8
  %8 = getelementptr inbounds %struct.hnae3_handle, %struct.hnae3_handle* %7, i32 0, i32 0
  store %struct.hnae3_knic_private_info* %8, %struct.hnae3_knic_private_info** %4, align 8
  %9 = load %struct.hnae3_knic_private_info*, %struct.hnae3_knic_private_info** %4, align 8
  %10 = getelementptr inbounds %struct.hnae3_knic_private_info, %struct.hnae3_knic_private_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.hns3_nic_priv* @netdev_priv(i32 %11)
  store %struct.hns3_nic_priv* %12, %struct.hns3_nic_priv** %5, align 8
  store i32 0, i32* %6, align 4
  %13 = load i32, i32* @HNS3_NIC_STATE_RESETTING, align 4
  %14 = load %struct.hns3_nic_priv*, %struct.hns3_nic_priv** %5, align 8
  %15 = getelementptr inbounds %struct.hns3_nic_priv, %struct.hns3_nic_priv* %14, i32 0, i32 0
  %16 = call i32 @clear_bit(i32 %13, i32* %15)
  %17 = load %struct.hnae3_knic_private_info*, %struct.hnae3_knic_private_info** %4, align 8
  %18 = getelementptr inbounds %struct.hnae3_knic_private_info, %struct.hnae3_knic_private_info* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @netif_running(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %41

22:                                               ; preds = %1
  %23 = load %struct.hnae3_knic_private_info*, %struct.hnae3_knic_private_info** %4, align 8
  %24 = getelementptr inbounds %struct.hnae3_knic_private_info, %struct.hnae3_knic_private_info* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @hns3_nic_net_open(i32 %25)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %40

29:                                               ; preds = %22
  %30 = load i32, i32* @HNS3_NIC_STATE_RESETTING, align 4
  %31 = load %struct.hns3_nic_priv*, %struct.hns3_nic_priv** %5, align 8
  %32 = getelementptr inbounds %struct.hns3_nic_priv, %struct.hns3_nic_priv* %31, i32 0, i32 0
  %33 = call i32 @set_bit(i32 %30, i32* %32)
  %34 = load %struct.hnae3_knic_private_info*, %struct.hnae3_knic_private_info** %4, align 8
  %35 = getelementptr inbounds %struct.hnae3_knic_private_info, %struct.hnae3_knic_private_info* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @netdev_err(i32 %36, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %37)
  %39 = load i32, i32* %6, align 4
  store i32 %39, i32* %2, align 4
  br label %43

40:                                               ; preds = %22
  br label %41

41:                                               ; preds = %40, %1
  %42 = load i32, i32* %6, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %41, %29
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local %struct.hns3_nic_priv* @netdev_priv(i32) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i64 @netif_running(i32) #1

declare dso_local i32 @hns3_nic_net_open(i32) #1

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @netdev_err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
